[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/predator.png" type="Texture" id=1]
[ext_resource path="res://Obstacles/Predator.gd" type="Script" id=2]
[ext_resource path="res://Obstacles/Generic/FishCatcher.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 17, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 51, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 85, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 17, 38 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 119, 0, 17, 38 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Iddle",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=19]

[node name="Predator" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "Iddle"
frame = 6
speed_scale = 1.3
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 19 )

[node name="FishCatcher" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="fished" from="FishCatcher" to="." method="_on_FishCatcher_fished"]
